# CHEVRE-75 ### Changed - 予約の価格属性を価格仕様に変更

--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -41,6 +41,12 @@
             <li class="<%= (displayId === 'Aa-15') ? 'active': ''; %>"><a href="/accountTitles">
                     <i class="glyphicon glyphicon-list"></i> 勘定科目検索</a>
             </li>
+            <li class="<%= (displayId === 'Aa-16') ? 'active': ''; %>"><a href="/serviceTypes/add">
+                    <i class="glyphicon glyphicon-plus"></i> 興行区分登録</a>
+            </li>
+            <li class="<%= (displayId === 'Aa-17') ? 'active': ''; %>"><a href="/serviceTypes">
+                    <i class="glyphicon glyphicon-list"></i> 興行区分検索</a>
+            </li>
         </ul>
     </div>
     <div class="panel panel-default">
